--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,6 +11,6 @@
   
 # - ansible.builtin.include_tasks: validate_ssms_setup_exists.yml
  
-# - ansible.builtin.include_tasks: install_mssql_n_ssms.yml
+- ansible.builtin.include_tasks: install_mssql_n_ssms.yml
  
 
