--- a/tasks/install_mssql_n_ssms.yml
+++ b/tasks/install_mssql_n_ssms.yml
@@ -1,7 +1,7 @@
 - block:
-    - name: Query SSMS installation status from Registry
-      win_shell: Get-ItemProperty -Path "HKLM:\Software\Microsoft\Windows\CurrentVersion\Uninstall\*" | Where-Object { $_.DisplayName -like "*SQL Server Management Studio*" }
-      register: ssms_installed
+    # - name: Query SSMS installation status from Registry
+    #   win_shell: Get-ItemProperty -Path "HKLM:\Software\Microsoft\Windows\CurrentVersion\Uninstall\*" | Where-Object { $_.DisplayName -like "*SQL Server Management Studio*" }
+    #   register: ssms_installed
 
     - name: Obtain information about a registry key using short form
       ansible.windows.win_reg_stat:
@@ -10,18 +10,18 @@
       register: common_path
 
   rescue:
-    - name: Installs SSMS
-      win_package:
-        path: "{{ download_path }}/SSMS-Setup-ENU.exe"
-        arguments: '/install /quiet'
-        product_id: "{aca4e29f-6925-4d50-a06b-5576c6ea629f}"
-      register: ssms_installation
+    # - name: Installs SSMS
+    #   win_package:
+    #     path: "{{ download_path }}/SSMS-Setup-ENU.exe"
+    #     arguments: '/install /quiet'
+    #     product_id: "{aca4e29f-6925-4d50-a06b-5576c6ea629f}"
+    #   register: ssms_installation
 
-    - name: Add to path
-      win_path:
-        elements:
-          - 'C:\Program Files (x86)\Microsoft SQL Server Management Studio 18\Common7\IDE'
-        state: present
+    # - name: Add to path
+    #   win_path:
+    #     elements:
+    #       - 'C:\Program Files (x86)\Microsoft SQL Server Management Studio 18\Common7\IDE'
+    #     state: present
 
     - name: install mssql
       win_package:
